<resources>
    <string name="app_name">维修管理</string>
    <string name="repair_manage">维修管理</string>
    <string name="repai_manager_search">设备名称</string>
    <string name="repair_post">维修申报</string>
    <string name="repair_complete">完 成</string>
    <string name="repair_patrol">相关巡检</string>
    <string name="repair_processing_person">处  理   人</string>
    <string name="repair_add_remark">添加备注</string>
    <string name="repair_remark">故障描述</string>
    <string name="repair_look_remark">查看故障描述</string>
    <string name="repair_look_fault">查看相关缺陷</string>
    <string name="repair_record">现场记录</string>
    <string name="repair_add_pic">最多添加6张图片</string>
    <string name="repair_max_picture">最多添加6张图片</string>
    <string name="repair_processing_person_title">选择处理人</string>
    <string name="repair_add_remarks_content">添加备注内容</string>
    <string name="repair_add_remarks_chars">0/200</string>
    <string name="repair_manager_search">搜索维修类型/编号</string>
    <string name="repair_manager">消缺管理</string>
    <string name="repair_assignment">分  派</string>

    <string name="repair_number">维修编号</string>
    <string name="repair_number_label">维修编号：</string>
    <string name="repair_level">严重程度</string>
    <string name="repair_fault_equipment">故障设备</string>
    <string name="repair_equipment">相关设备</string>
    <string name="repair_location">区域位置</string>
    <string name="repair_scene">现场记录</string>
    <string name="repair_deal_result">处理结果</string>
    <string name="repair_equipment_repair">设备报修</string>
    <string name="repair_declare_remark">维修申报备注</string>
    <string name="repair_new_scene">维修现场记录</string>
    <string name="repair_no_content">无内容</string>
    <string name="repair_processing_results">维修工单详情</string>
    <string name="repair_processing_progress">处理进度</string>
    <string name="repair_processing_result">处理结果</string>
    <string name="repair_processing_reason">维修原因</string>
    <string name="repair_processing_time">处理时间</string>
    <string name="repair_processing_scene">处理后现场记录</string>
    <string name="repair_processing_remark">备注</string>
    <string name="repair_processing_equipment_repair">设备报修</string>
    <string name="repair_type">维修类型</string>
    <string name="repair_type_label">维修类型：</string>
    <string name="repair_equipment_name">设备名称</string>
    <string name="repair_equipment_code">设备编号</string>
    <string name="repair_equipment_code_label">设备编号：</string>
    <string name="repair_excute_person_label">处理人：</string>
    <string name="repair_equipment_org">所属组织</string>
    <string name="repair_process_postion">区域位置</string>
    <string name="repair_fault_reason">故障原因</string>
    <string name="repair_degree">紧急程度</string>
    <string name="repair_add_remarks">添加备注</string>
    <string name="repair_equipments">设备报修</string>
    <string name="repair_details">维修详情</string>
    <string name="repair_result">维修结果</string>
    <string name="repair_method">维修措施</string>
    <string name="repair_start_time">开始时间</string>
    <string name="repair_end_time">结束时间</string>
    <string name="repair_analysis">故障分析</string>
    <string name="repair_add_analysis">添加故障分析</string>
    <string name="repair_look_repair_analysis">查看故障分析</string>
    <string name="repair_post_repair_result">维修结果填报</string>
    <string name="repair_processing_result_repari">维修结果填报</string>
    <string name="repair_processing_after">处理后现场记录</string>
    <string name="repair_type_title">维修类型</string>
    <string name="repair_success">提交成功</string>
    <string name="repair_see">查看维修</string>
    <string name="repair_back_home">返回首页</string>
    <string name="repair_equipment_success">设备维修申请提交成功</string>
    <string name="title_activity_repair_filter">repairFilterActivity</string>
    <string name="repair_servity">严重程度</string>
    <string name="repair_see_to">查看现场记录</string>
    <string name="repair_report_person">报障人员</string>
    <string name="repair_report_date">报修时间</string>
    <string name="repair_create_person">创建人</string>
    <string name="repair_excute_person">处理人</string>
    <string name="repair_processing_person_label">当前处理人：</string>
    <string name="repair_state">状态</string>

    <string name="repair_fault_type">缺陷类型</string>
    <string name="repair_fault_detail">缺陷详情</string>
    <string name="repair_fault_code">缺陷编号</string>
    <string name="repair_falut_remark">缺陷备注</string>
    <string name="repair_scene_record">缺陷现场记录</string>
    <string name="repair_fault_report_person">申报人员</string>
    <string name="repair_fault_report_date">申报时间</string>
    <string name="repair_look_scene_record">查看缺陷现场记录</string>

    <string name="repair_all_person_id">0</string>
    <string name="repair_all_person">所有人</string>
    <string name="repair_assign_succuss">分派成功</string>
    <string name="repair_assign_fail">分派失败</string>
    <string name="repair_complete_time">完成时间</string>
    <string name="repair_pick_result">选择维修结果</string>
    <string name="repair_state_processing">处理中</string>
    <string name="repair_state_hang_up">挂起</string>
    <string name="repair_state_complete">已完成</string>
    <string name="repair_state_close">关闭</string>
    <string name="repair_cancel">取消</string>
    <string name="repair_pick_method">选择维修措施</string>
    <string name="repair_method_replace">更换</string>
    <string name="repair_method_repair">维修</string>
    <string name="repair_method_others">其他</string>
    <string name="repair_result_tip">请输入维修结果</string>
    <string name="repair_method_tip">请选择维修措施</string>
    <string name="repair_complete_time_tip">请选择完成时间</string>
    <string name="repair_upload_fail">维修结果填报失败</string>
    <string name="repair_report_result_tip">请填写维修结果</string>
    <string name="repair_report_adopt_tip">请填写维修措施</string>
    <string name="repair_report_finishdate_tip">请选择完成时间</string>
    <string name="repair_report_analysis_tip">请填写故障分析</string>
</resources>
