<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/title_common" />


    <ImageView
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/repair_success_ic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/repair_success"
        android:textColor="@color/color_login_hint"
        android:textSize="@dimen/fs16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/repair_equipment_success"
        android:textColor="@color/color_self_tv"
        android:textSize="@dimen/fs15" />

    <TextView
        android:id="@+id/repair_see_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/repair_success_shape"
        android:padding="10dp"
        android:text="@string/repair_see"
        android:textColor="@color/color_title_blue_bg" />

</LinearLayout>
