<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <include layout="@layout/title_common" />

    <LinearLayout style="@style/repair_manager_details_ll">

        <TextView
            style="@style/repair_manager_details_tv"
            android:text="@string/repair_processing_result" />

        <TextView
            android:id="@+id/repair_processing_result_tv"
            style="@style/repair_manager_details_tv2" />
    </LinearLayout>

    <View style="@style/repair_manager_hint" />

    <LinearLayout style="@style/repair_manager_details_ll">

        <TextView
            style="@style/repair_manager_details_tv"
            android:text="@string/repair_processing_reason" />

        <TextView
            android:id="@+id/repairReason_tv"
            style="@style/repair_manager_details_tv2" />
    </LinearLayout>

    <View style="@style/repair_manager_hint" />

    <LinearLayout style="@style/repair_manager_details_ll">

        <TextView
            style="@style/repair_manager_details_tv"
            android:text="处  理  人" />

        <TextView
            android:id="@+id/repair_person_tv"
            style="@style/repair_manager_details_tv2" />
    </LinearLayout>

    <View style="@style/repair_manager_hint" />

    <LinearLayout style="@style/repair_manager_details_ll">

        <TextView
            style="@style/repair_manager_details_tv"
            android:text="@string/repair_processing_time" />

        <TextView
            android:id="@+id/processing_date_tv"
            style="@style/repair_manager_details_tv2" />
    </LinearLayout>

    <View style="@style/repair_manager_hint" />

    <TextView
        android:id="@+id/scene_tv"
        style="@style/repair_manager_details_tv"
        android:layout_marginLeft="@dimen/hc_margin"
        android:layout_marginTop="20dp"
        android:text="@string/repair_processing_scene" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/no_pic_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="暂无现场记录图片"
        android:textColor="@color/color_hint"
        android:textSize="@dimen/fs16"
        android:visibility="gone" />

    <TextView
        style="@style/repair_manager_details_tv"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="@dimen/hc_margin"

        android:layout_marginTop="20dp"
        android:text="@string/repair_processing_remark" />

    <View style="@style/repair_manager_hint" />

    <TextView
        android:id="@+id/repair_remark_tv"
        style="@style/repair_manager_details_tv"
        android:layout_marginLeft="@dimen/hc_margin"
        android:layout_marginRight="@dimen/hc_margin"
        android:layout_marginTop="20dp" />
</LinearLayout>
